...
                    Label {
                        Text(verbatim: "開発者メニュー")
                    } icon: {
                        Image(systemName: "hammer")
                    }
                }
                .accessibilityIdentifier("debug_menu_link")
            }
            #endif
        }
        .sheet(item: $editTargetAnswer) { answer in
            AnswerEditPage(answer: answer)
        }
...
